Added the Ninety Nine Bottles test.

--- a/ninetyNineBottles.html
+++ b/ninetyNineBottles.html
@@ -4,10 +4,10 @@
 
 	<head>
 		<meta charset="utf-8">
-		<meta name="description" content="The main page of a test website.">
+		<meta name="description" content="Test of JavaScript">
 		<meta name="keywords" content="web, page, test">
 		
-		<title>Main Page</title>
+		<title>Ninety Nine Bottles</title>
 		
 		<link href="css/myStyle.css" rel="stylesheet"/>
 	</head>
@@ -22,8 +22,8 @@
 			
 			<nav>
 				<ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="ninetyNineBottles.html">Ninety Nine Bottles</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="#">Ninety Nine Bottles</a></li>
 				</ul>
 			</nav>
 			
@@ -32,7 +32,7 @@
 			</aside>
 			
 			<section>
-				section
+				<script src="ninetyNineBottles.js"></script>
 			</section>
 			
 			<footer>
