Added the Battleship test.

--- a/battleship.html
+++ b/battleship.html
@@ -4,10 +4,10 @@
 
 	<head>
 		<meta charset="utf-8">
-		<meta name="description" content="Test of JavaScript">
-		<meta name="keywords" content="web, page, test">
+		<meta name="description" content="JavaScript Battleship test">
+		<meta name="keywords" content="web, page, test, battleship">
 		
-		<title>Ninety Nine Bottles</title>
+		<title>Battleship</title>
 		
 		<link href="css/myStyle.css" rel="stylesheet"/>
 	</head>
@@ -23,8 +23,8 @@
 			<nav>
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li><a href="#">Ninety Nine Bottles</a></li>
-					<li><a href="battleship.html">Battleship</a></li>
+					<li><a href="ninetyNineBottles.html">Ninety Nine Bottles</a></li>
+					<li><a href="#">Battleship</a></li>
 				</ul>
 			</nav>
 			
@@ -33,7 +33,7 @@
 			</aside>
 			
 			<section>
-				<script src="ninetyNineBottles.js"></script>
+				<script src="battleship.js"></script>
 			</section>
 			
 			<footer>
