--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 				<ul>
 					<li><a href="#">Home</a></li>
 					<li><a href="ninetyNineBottles.html">Ninety Nine Bottles</a></li>
+					<li><a href="battleship.html">Battleship</a></li>
 				</ul>
 			</nav>
 			
