Added the Thing-A-Ma-Jig

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 					<li><a href="#">Home</a></li>
 					<li><a href="ninetyNineBottles.html">Ninety Nine Bottles</a></li>
 					<li><a href="battleship.html">Battleship</a></li>
+					<li><a href="thingamajig.html">Thing-A-Ma-Jig</a></li>
 				</ul>
 			</nav>
 			
