--- a/ninetyNineBottles.html
+++ b/ninetyNineBottles.html
@@ -25,6 +25,7 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a href="#">Ninety Nine Bottles</a></li>
 					<li><a href="battleship.html">Battleship</a></li>
+					<li><a href="thingamajig.html">Thing-A-Ma-Jig</a></li>
 				</ul>
 			</nav>
 			
