--- a/thingamajig.html
+++ b/thingamajig.html
@@ -4,10 +4,10 @@
 
 	<head>
 		<meta charset="utf-8">
-		<meta name="description" content="JavaScript Battleship test">
-		<meta name="keywords" content="web, page, test, battleship">
+		<meta name="description" content="JavaScript Thing-A-Ma-Jig test">
+		<meta name="keywords" content="web, page, test">
 		
-		<title>Battleship</title>
+		<title>Thing-A-Ma-Jig</title>
 		
 		<link href="css/myStyle.css" rel="stylesheet"/>
 	</head>
@@ -24,8 +24,8 @@
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="ninetyNineBottles.html">Ninety Nine Bottles</a></li>
-					<li><a href="#">Battleship</a></li>
-					<li><a href="thingamajig.html">Thing-A-Ma-Jig</a></li>
+					<li><a href="battleship.html">Battleship</a></li>
+					<li><a href="#">Thing-A-Ma-Jig</a></li>
 				</ul>
 			</nav>
 			
@@ -34,7 +34,7 @@
 			</aside>
 			
 			<section>
-				<script src="battleship.js"></script>
+				<script src="thingamajig.js"></script>
 			</section>
 			
 			<footer>
