--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 					<li><a href="ninetyNineBottles.html">Ninety Nine Bottles</a></li>
 					<li><a href="battleship.html">Battleship</a></li>
 					<li><a href="thingamajig.html">Thing-A-Ma-Jig</a></li>
+					<li><a href="bubbles.html">Bubbles Project</a></li>
+					<li><a href="phraseomatic.html">Phrase-O-Matic</a></li>
 				</ul>
 			</nav>
 			
