--- a/phraseomatic.html
+++ b/phraseomatic.html
@@ -4,10 +4,10 @@
 
 	<head>
 		<meta charset="utf-8">
-		<meta name="description" content="JavaScript Battleship test">
-		<meta name="keywords" content="web, page, test, battleship">
+		<meta name="description" content="JavaScript Phrase-O-Matic test">
+		<meta name="keywords" content="web, page, test">
 		
-		<title>Battleship</title>
+		<title>Phrase-O-Matic</title>
 		
 		<link href="css/myStyle.css" rel="stylesheet"/>
 	</head>
@@ -24,10 +24,10 @@
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="ninetyNineBottles.html">Ninety Nine Bottles</a></li>
-					<li><a href="#">Battleship</a></li>
+					<li><a href="battleship.html">Battleship</a></li>
 					<li><a href="thingamajig.html">Thing-A-Ma-Jig</a></li>
 					<li><a href="bubbles.html">Bubbles Project</a></li>
-					<li><a href="phraseomatic.html">Phrase-O-Matic</a></li>
+					<li><a href="#">Phrase-O-Matic</a></li>
 				</ul>
 			</nav>
 			
@@ -36,7 +36,7 @@
 			</aside>
 			
 			<section>
-				<script src="battleship.js"></script>
+				<script src="phraseomatic.js"></script>
 			</section>
 			
 			<footer>
