Added the Fiat test.

--- a/bubbles.html
+++ b/bubbles.html
@@ -28,6 +28,7 @@
 					<li><a href="thingamajig.html">Thing-A-Ma-Jig</a></li>
 					<li><a href="#">Bubbles Project</a></li>
 					<li><a href="phraseomatic.html">Phrase-O-Matic</a></li>
+					<li><a href="fiat.html">Fiat</a></li>
 				</ul>
 			</nav>
 			
