--- a/fiat.html
+++ b/fiat.html
@@ -4,10 +4,10 @@
 
 	<head>
 		<meta charset="utf-8">
-		<meta name="description" content="The main page of a test website.">
-		<meta name="keywords" content="web, page, test">
+		<meta name="description" content="JavaScript Fiat">
+		<meta name="keywords" content="web, page, test, fiat">
 		
-		<title>Main Page</title>
+		<title>Fiat</title>
 		
 		<link href="css/myStyle.css" rel="stylesheet"/>
 	</head>
@@ -22,13 +22,13 @@
 			
 			<nav>
 				<ul>
-					<li><a href="#">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="ninetyNineBottles.html">Ninety Nine Bottles</a></li>
 					<li><a href="battleship.html">Battleship</a></li>
 					<li><a href="thingamajig.html">Thing-A-Ma-Jig</a></li>
 					<li><a href="bubbles.html">Bubbles Project</a></li>
 					<li><a href="phraseomatic.html">Phrase-O-Matic</a></li>
-					<li><a href="fiat.html">Fiat</a></li>
+					<li><a href="#">Fiat</a></li>
 				</ul>
 			</nav>
 			
@@ -37,7 +37,7 @@
 			</aside>
 			
 			<section>
-				section
+				<script src="fiat.js"></script>
 			</section>
 			
 			<footer>
