--- a/thingamajig.html
+++ b/thingamajig.html
@@ -28,6 +28,7 @@
 					<li><a href="#">Thing-A-Ma-Jig</a></li>
 					<li><a href="bubbles.html">Bubbles Project</a></li>
 					<li><a href="phraseomatic.html">Phrase-O-Matic</a></li>
+					<li><a href="fiat.html">Fiat</a></li>
 				</ul>
 			</nav>
 			
