--- a/planet.html
+++ b/planet.html
@@ -7,7 +7,9 @@
 		<meta name="description" content="JavaScript Fiat">
 		<meta name="keywords" content="web, page, test, fiat">
 		
-		<title>Fiat</title>
+		<title>Planets Project</title>
+		
+		<style>.redtext {color: #882020;}</style>
 		
 		<link href="css/myStyle.css" rel="stylesheet"/>
 	</head>
@@ -28,8 +30,8 @@
 					<li><a href="thingamajig.html">Thing-A-Ma-Jig</a></li>
 					<li><a href="bubbles.html">Bubbles Project</a></li>
 					<li><a href="phraseomatic.html">Phrase-O-Matic</a></li>
-					<li><a href="#">Fiat</a></li>
-					<li><a href="planet.html">Planets Project</a></li>
+					<li><a href="fiat.html">Fiat</a></li>
+					<li><a href="#">Planets Project</a></li>
 				</ul>
 			</nav>
 			
@@ -38,12 +40,22 @@
 			</aside>
 			
 			<section>
-				<script src="fiat.js"></script>
+				<h1>Green Planet</h1>
+				<p id="greenplanet">All is well</p>
+				
+				<h1>Red Planet</h1>
+				<p id="redplanet">Nothing to report</p>
+
+				<h1>Blue Planet</h1>
+				<p id="blueplanet">All systems A-OK</p>
 			</section>
 			
 			<footer>
 				footer
 			</footer>
+			
+			
+			<script src="planet.js"></script>
 		
 		</div>
 	
