--- a/ninetyNineBottles.html
+++ b/ninetyNineBottles.html
@@ -29,6 +29,7 @@
 					<li><a href="bubbles.html">Bubbles Project</a></li>
 					<li><a href="phraseomatic.html">Phrase-O-Matic</a></li>
 					<li><a href="fiat.html">Fiat</a></li>
+					<li><a href="planet.html">Planets Project</a></li>
 				</ul>
 			</nav>
 			
