Added the Better Battleship project

--- a/fiat.html
+++ b/fiat.html
@@ -30,6 +30,7 @@
 					<li><a href="phraseomatic.html">Phrase-O-Matic</a></li>
 					<li><a href="#">Fiat</a></li>
 					<li><a href="planet.html">Planets Project</a></li>
+					<li><a href="betterBattleship.html">Better Battleship</a></li>
 				</ul>
 			</nav>
 			
