--- a/phraseomatic.html
+++ b/phraseomatic.html
@@ -30,6 +30,7 @@
 					<li><a href="#">Phrase-O-Matic</a></li>
 					<li><a href="fiat.html">Fiat</a></li>
 					<li><a href="planet.html">Planets Project</a></li>
+					<li><a href="betterBattleship.html">Better Battleship</a></li>
 				</ul>
 			</nav>
 			
