--- a/planet.html
+++ b/planet.html
@@ -32,6 +32,7 @@
 					<li><a href="phraseomatic.html">Phrase-O-Matic</a></li>
 					<li><a href="fiat.html">Fiat</a></li>
 					<li><a href="#">Planets Project</a></li>
+					<li><a href="betterBattleship.html">Better Battleship</a></li>
 				</ul>
 			</nav>
 			
