Added the Image Blurring game

--- a/fiat.html
+++ b/fiat.html
@@ -31,6 +31,7 @@
 					<li><a href="#">Fiat</a></li>
 					<li><a href="planet.html">Planets Project</a></li>
 					<li><a href="betterBattleship.html">Better Battleship</a></li>
+					<li><a href="imageGame.html">Image Game</a></li>
 				</ul>
 			</nav>
 			
