--- a/imageGame.html
+++ b/imageGame.html
@@ -4,10 +4,10 @@
 
 	<head>
 		<meta charset="utf-8">
-		<meta name="description" content="The main page of a test website.">
-		<meta name="keywords" content="web, page, test">
+		<meta name="description" content="JavaScript Image Unblurring 'Game'">
+		<meta name="keywords" content="web, page, test, blur">
 		
-		<title>Main Page</title>
+		<title>Image Game</title>
 		
 		<link href="css/myStyle.css" rel="stylesheet"/>
 	</head>
@@ -22,7 +22,7 @@
 			
 			<nav>
 				<ul>
-					<li><a href="#">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="ninetyNineBottles.html">Ninety Nine Bottles</a></li>
 					<li><a href="battleship.html">Battleship</a></li>
 					<li><a href="thingamajig.html">Thing-A-Ma-Jig</a></li>
@@ -31,7 +31,7 @@
 					<li><a href="fiat.html">Fiat</a></li>
 					<li><a href="planet.html">Planets Project</a></li>
 					<li><a href="betterBattleship.html">Better Battleship</a></li>
-					<li><a href="imageGame.html">Image Game</a></li>
+					<li><a href="#">Image Game</a></li>
 				</ul>
 			</nav>
 			
@@ -40,7 +40,13 @@
 			</aside>
 			
 			<section>
-				section
+				<script src="imageGame.js"></script>
+				<img id="zero" src="images/zeroblur.jpg">
+				<img id="one" src="images/oneblur.jpg">
+				<img id="two" src="images/twoblur.jpg">
+				<img id="three" src="images/threeblur.jpg">
+				<img id="four" src="images/fourblur.jpg">
+				<img id="five" src="images/fiveblur.jpg">
 			</section>
 			
 			<footer>
