--- a/planet.html
+++ b/planet.html
@@ -33,6 +33,7 @@
 					<li><a href="fiat.html">Fiat</a></li>
 					<li><a href="#">Planets Project</a></li>
 					<li><a href="betterBattleship.html">Better Battleship</a></li>
+					<li><a href="imageGame.html">Image Game</a></li>
 				</ul>
 			</nav>
 			
