--- a/betterBattleship.html
+++ b/betterBattleship.html
@@ -31,6 +31,7 @@
 					<li><a href="fiat.html">Fiat</a></li>
 					<li><a href="planet.html">Planets Project</a></li>
 					<li><a href="#">Better Battleship</a></li>
+					<li><a href="imageGame.html">Image Game</a></li>
 				</ul>
 			</nav>
 			
