Added the 960 test page and related files.

--- a/betterBattleship.html
+++ b/betterBattleship.html
@@ -32,6 +32,7 @@
 					<li><a href="planet.html">Planets Project</a></li>
 					<li><a href="#">Better Battleship</a></li>
 					<li><a href="imageGame.html">Image Game</a></li>
+					<li><a href="960.html">960 Page</a></li>
 				</ul>
 			</nav>
 			
