--- a/imageGame.html
+++ b/imageGame.html
@@ -32,6 +32,7 @@
 					<li><a href="planet.html">Planets Project</a></li>
 					<li><a href="betterBattleship.html">Better Battleship</a></li>
 					<li><a href="#">Image Game</a></li>
+					<li><a href="960.html">960 Page</a></li>
 				</ul>
 			</nav>
 			
