--- a/planet.html
+++ b/planet.html
@@ -34,6 +34,7 @@
 					<li><a href="#">Planets Project</a></li>
 					<li><a href="betterBattleship.html">Better Battleship</a></li>
 					<li><a href="imageGame.html">Image Game</a></li>
+					<li><a href="960.html">960 Page</a></li>
 				</ul>
 			</nav>
 			
